--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "Graphql-server",
+  "name": "graphql-server",
   "version": "1.0.0",
   "description": "",
   "main": "config.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
