--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "apollo-server": "^3.5.0",
     "bcrypt": "^5.0.1",
     "graphql": "^16.0.1",
+    "graphql-subscriptions": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.13",
     "nodemon": "^2.0.15"
